<resources>
    <string name="app_name">LoginUI</string>
    <string name="create_account">Create Account</string>
    <string name="create_an_account_so_you_can_explore_all_the_existing_jobs">Create an account so you can explore all the existing jobs</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="or_continue_with">Or continue with</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apple">Apple</string>
    <string name="back">Back</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="account_created">Account Created</string>
</resources>